trying a fix on mobile height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 body {
-    height: 100%;
     background-size: cover;
     font-family: 'Roboto', sans-serif;
-    max-height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
 }
 
 a {
@@ -11,10 +11,10 @@ a {
 }
 
 .holiday__wrapper {
-    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100%;
 }
 
 .holiday__message {
@@ -24,7 +24,7 @@ a {
     border-radius: 4px;
     box-shadow: 0 26px 42px rgb(207 158 158 / 10%);
     padding: 2em;
-    margin: 1.5em;
+    margin: 1.5em 1.5em 5em;
 }
 
 h1 {
